--- a/routerparttwo/src/assets/main.css
+++ b/routerparttwo/src/assets/main.css
@@ -30,7 +30,7 @@ a,
   align-items: center;
   background-color: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
   box-sizing: border-box;
   color: rgba(0, 0, 0, 0.85);
@@ -39,11 +39,11 @@ a,
   font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 16px;
   font-weight: 600;
-  justify-content: center;
+  justify-content: space-between;
   line-height: 1.25;
   margin: 0;
   min-height: 3rem;
-  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  /* padding: calc(.875rem - 1px) calc(1.5rem - 1px); */
   position: relative;
   text-decoration: none;
   transition: all 250ms;
@@ -71,4 +71,17 @@ a,
   box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
   color: rgba(0, 0, 0, 0.65);
   transform: translateY(0);
+}
+
+/* make row centered */
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: center;
+}
+
+.last-accessed {
+  opacity: 0.7;
+  margin-right: 0.5rem;
 }
