--- a/routerparttwo/src/assets/main.css
+++ b/routerparttwo/src/assets/main.css
@@ -42,7 +42,7 @@ a,
   justify-content: space-between;
   line-height: 1.25;
   margin: 0;
-  min-height: 3rem;
+  height: 3rem;
   /* padding: calc(.875rem - 1px) calc(1.5rem - 1px); */
   position: relative;
   text-decoration: none;
@@ -51,7 +51,12 @@ a,
   -webkit-user-select: none;
   touch-action: manipulation;
   vertical-align: baseline;
-  width: auto;
+  width: 800px
+}
+
+.button-6>.x {
+
+  width: 100px;
 }
 
 .button-6:hover,
@@ -61,7 +66,7 @@ a,
   color: rgba(0, 0, 0, 0.65);
 }
 
-.button-6:hover {
+.row:hover {
   transform: translateY(-1px);
 }
 
@@ -73,15 +78,17 @@ a,
   transform: translateY(0);
 }
 
-/* make row centered */
 .row {
   display: flex;
-  justify-content: center;
   align-items: center;
-  vertical-align: center;
+  justify-content: center;
+  margin-bottom: 4px;
+  margin: 0 auto;
+  transition: all 250ms;
 }
 
 .last-accessed {
   opacity: 0.7;
-  margin-right: 0.5rem;
+  margin-right: 1rem;
+  font-size: 0.8rem;
 }
