--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -25,15 +25,15 @@ a,
 /* Home Page repo buttons */
 .button-6 {
   align-items: center;
-  background-color: #FFFFFF;
-  border: 1px solid rgba(135, 169, 255, 0.203);
+  background-color: #157eff;
+  border: 1px solid rgba(174, 197, 255, 0.203);
   border-radius: 0.25rem;
   box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
   box-sizing: border-box;
-  color: rgba(0, 0, 0, 0.85);
+  color: rgba(255, 255, 255, 0.85);
   cursor: pointer;
   display: inline-flex;
-  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: system-ui,-apple-system,system-ui,"Cantarell",Helvetica,Arial,sans-serif;
   font-size: 16px;
   font-weight: 600;
   justify-content: space-between;
