--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -84,3 +84,10 @@ a,
   margin-right: 1.2rem;
   font-size: 0.8rem;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 1rem;
+  margin-top: 1rem;
+}
